--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -21,6 +21,15 @@ html {
 	#sign-up {
 		text-align: center;
 		padding: 20px;
+		color:white;
+		font-family: "Helvetica Neue", Helvetica, sans-serif;
+		h1 {
+			font-family: "Helvetica Neue", Helvetica, sans-serif;
+			color: red;
+			padding:10px;
+			margin:0;
+			font-size: 18px;
+		}
 		input[type=text] {
 			text-align: center;
 			border-radius: 10px;
@@ -28,7 +37,7 @@ html {
 			font-size: 20px;
 			padding: 10px;
 			font-family: "Helvetica Neue", Helvetica, sans-serif;
-			border:1pt solid white;
+			border:2pt solid white;
 			color:white;
 			background:black;
 			&:focus {
@@ -36,4 +45,8 @@ html {
 			}
 		}
 	}
+}
+
+input[placeholder], [placeholder], *[placeholder] {
+	color:white !important;
 }
