--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,5 +10,10 @@
 
 <%= yield %>
 
+<script type="text/javascript">
+$(document).ready(function () {
+	$('.chzn-select').chosen();
+});
+</script>
 </body>
 </html>
