--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -10,7 +10,7 @@
 
 		<%= text_field_tag :email  %>
 
-		<input type="submit">
+		<input type="submit" value="Check Me">
 		<% end %>
 	</div>
 </div>
