--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -2,12 +2,12 @@
 
 <p>
   <b>Person:</b>
-  <%= @order.person %>
+  <%= @order.person.name %>
 </p>
 
 <p>
   <b>Product:</b>
-  <%= @order.product %>
+  <%= @order.product.name %>
 </p>
 
 <p>
