--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -23,6 +23,12 @@
     <%= f.label :description %><br />
     <%= f.text_area :description %>
   </div>
+  <div class="field">
+    <%= f.label :active %>
+    <%= f.radio_button :active, true %>
+    <%= f.label :inactive %>
+    <%= f.radio_button :active, false %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
