--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -4,16 +4,16 @@
   <tr>
     <th>Name</th>
     <th>Email</th>
-    <th></th>
+    <th>Total Orders</th>
     <th></th>
     <th></th>
   </tr>
 
 <% @people.each do |person| %>
   <tr>
-    <td><%= person.name %></td>
-    <td><%= person.email %></td>
-    <td><%= link_to 'Show', person %></td>
+    <td><%= link_to person.name, person %></td>
+    <td><%= link_to person.email, "mailto:"+person.email %></td>
+    <td><%= person.orders.count %>
     <td><%= link_to 'Edit', edit_person_path(person) %></td>
     <td><%= link_to 'Destroy', person, method: :delete, data: { confirm: 'Are you sure?' } %></td>
   </tr>
