--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -14,10 +14,67 @@
  */
 @import "bootstrap";
 
+
+p, ol, ul, td {
+  font-size: 13px;
+  line-height: 18px;
+}
+
+
+a {
+  color: #fff;
+  &:visited {
+    color: #fff;
+  }
+  &:hover {
+    color: #000;
+    background-color: #fff;
+  }
+}
+
+div {
+  &.field, &.actions {
+    margin-bottom: 10px;
+  }
+}
+
+#notice {
+  color: green;
+}
+
+.field_with_errors {
+  padding: 2px;
+  background-color: red;
+  display: table;
+}
+
+#error_explanation {
+  width: 450px;
+  border: 2px solid red;
+  padding: 7px;
+  padding-bottom: 0;
+  margin-bottom: 20px;
+  background-color: #f0f0f0;
+  h2 {
+    text-align: left;
+    font-weight: bold;
+    padding: 5px 5px 5px 15px;
+    font-size: 12px;
+    margin: -7px;
+    margin-bottom: 0px;
+    background-color: #c00;
+    color: #fff;
+  }
+  ul li {
+    font-size: 12px;
+    list-style: square;
+  }
+}
+
 html {
 	body {
 		background:black;
-		color: #fff;
+		color:#fff;
 		font-family: "Helvetica Neue", Helvetica, sans-serif;
 		#logo-container {
 			text-align: center;
@@ -57,11 +114,17 @@ html {
 				padding: 10px;
 				font-size: 20px;
 				cursor: pointer;
+				margin-bottom:0;
 				&:hover {
 					background:white;
 					color:black;
 				}
 			}
+		}
+		.container {
+			width:800px;
+			margin: 0 auto;
+			text-align: center;
 		}
 	}
 }
