--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,9 @@
 </head>
 <body>
 
+<div class="container">
 <%= yield %>
+</div>
 
 <script type="text/javascript">
 $(document).ready(function () {
