--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -26,5 +26,4 @@
 </p>
 
 
-<%= link_to 'Edit', edit_order_path(@order) %> |
-<%= link_to 'Back', orders_path %>
+<%= link_to 'Edit', edit_order_path(@order) %>
