bunch of changes

--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -25,7 +25,7 @@
   </div>
   <div class="field">
     <%= f.label :active %>
-    <%= f.radio_button :active, true %>
+    <%= f.radio_button :active, true, { :checked => true }%>
     <%= f.label :inactive %>
     <%= f.radio_button :active, false %>
   </div>
