--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -98,6 +98,7 @@ html {
 				width:300px;
 				font-size: 20px;
 				padding: 10px;
+                margin:0px;
 				font-family: "Helvetica Neue", Helvetica, sans-serif;
 				border:2pt solid white;
 				color:white;
