bunch of changes

--- a/app/views/main/admin.html.erb
+++ b/app/views/main/admin.html.erb
@@ -1,5 +1,5 @@
 <h2>Burrito Society Admin</h2>
-
+<h4><a href="/orders">View Orders</a></h4>
 <h4><a href="/people/new">Add Person</a></h4>
 <h4><a href="/products/new">Add Product</a></h4>
 <h4><a href="/people">View People</a></h4>
