--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -34,6 +34,12 @@
     </select>
 
   </div>
+<!--   <div class="field">
+    <select name="order[served]" data-placeholder="Fulfilled?" class="chzn-select" style="width:250px;">
+        <option value="false" selected>Not Fullfilled</option>
+        <option value="true">Fullfilled</option>
+    </select>
+  </div> -->
   <div class="actions">
     <%= f.submit "Order", :class => "btn" %>
   </div>
