--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -29,7 +29,8 @@
   <div class="field">
     <%= f.label :payment, "How would you like to pay?" %><br />
     <select name="order[payment]" data-placeholder="Choose a form of payment" class="chzn-select" style="width:250px;">
-        <option value="Cash">Cash</option>
+        <option value="Leave Cash In Envelope">Leave Cash In Envelope</option>
+        <option value="Credit Card Upon Delivery">Credit Card Upon Delivery</option>
 
     </select>
 
