--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -23,7 +23,7 @@
     </select>
   </div>
   <div class="field">
-    <%= f.label :location, "Where should we drop this off?" %><br />
+    <%= f.label :location, "When and where do you want your food?" %><br />
     <%= f.text_field :location %>
   </div>
   <div class="field">
