--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,3 +1,3 @@
-<h1><!-- It's <%= Time.now.strftime("%H:%M") %>. --> Place an Order?</h1>
+<h1 class="red bottom-border"><!-- It's <%= Time.now.strftime("%H:%M") %>. --> Place an Order?</h1>
 
 <%= render 'form' %>
