--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -9,7 +9,10 @@
   <b>Product:</b>
   <%= @order.product.name %>
 </p>
-
+<p>
+  <b>Quantity:</b>
+  <%= @order.quantity %>
+</p>
 <p>
   <b>Location:</b>
   <%= @order.location %>
@@ -19,7 +22,6 @@
   <b>Payment:</b>
   <%= @order.payment %>
 </p>
-
 <p>
   <b>Ordered at</b>
   <%= @order.created_at.to_time.strftime( "%m/%d/%Y at %I:%M%p") %>
