--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -21,7 +21,7 @@
         <% end %>
     </td>
     <td>
-        <% if !order.person.nil? %>
+        <% if !order.product.nil? %>
             <a href="/products/<%= order.product.id %>"><%= order.product.name %></a>
         <% end %>
     </td>
