--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -26,6 +26,24 @@
   <b>Ordered at</b>
   <%= @order.created_at.to_time.strftime( "%m/%d/%Y at %I:%M%p") %>
 </p>
+<footer style="text-align:center;">
 
+<h4 style="color:red;">Instagram</h4>
+<p>
+<style>.ig-b- { display: inline-block; }
+.ig-b- img { visibility: hidden; }
+.ig-b-:hover { background-position: 0 -60px; } .ig-b-:active { background-position: 0 -120px; }
+.ig-b-24 { width: 24px; height: 24px; background: url(//badges.instagram.com/static/images/ig-badge-sprite-24.png) no-repeat 0 0; }
+@media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min--moz-device-pixel-ratio: 2), only screen and (-o-min-device-pixel-ratio: 2 / 1), only screen and (min-device-pixel-ratio: 2), only screen and (min-resolution: 192dpi), only screen and (min-resolution: 2dppx) {
+.ig-b-24 { background-image: url(//badges.instagram.com/static/images/ig-badge-sprite-24@2x.png); background-size: 60px 178px; } }</style>
+<a href="http://instagram.com/mistersalsaman?ref=badge" class="ig-b- ig-b-24"><img src="//badges.instagram.com/static/images/ig-badge-24.png" alt="Instagram" /></a>
+</p>
+<h4 style="color:red;">Twitter</h4>
+
+<p>
+<a class="twitter-timeline" href="https://twitter.com/misterSALSAman" data-widget-id="306801719147364352">Tweets by @misterSALSAman</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script> 
+</p>  
+</footer>
 
 <%= link_to 'Edit', edit_order_path(@order) %>
